# OCR

./: CMakeLists.txt  main.cpp  ocr.cpp
include/: Functions.hh  ScreenShot.hh
